[package]
name = "unity-native-rendering-plugin-example-rs"
version = "0.4.0"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin = { path = "../unity-native-plugin-rs/unity-native-plugin", features = ["d3d11", "d3d12"] }
unity-native-plugin-vulkan = { path = "../unity-native-plugin-rs/unity-native-plugin-vulkan" }
