[package]
#name = "unity-native-rendering-plugin-example-rs"
name = "RenderingPlugin"
version = "0.5.1"
authors = ["Yasuhiro Taniuchi"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unity-native-plugin = { Version = "0.4.1" , features = ["d3d11", "d3d12"] }
unity-native-plugin-vulkan = { Version = "0.4.1" }
winapi = { version = "0.3.9", features = ["winuser", "d3d11", "dxgiformat"] }
wio = "0.2.2"
d3d12 = "0.3.2"
ash = "0.33.1"

[dev-dependencies]
unity-native-plugin-tester = { git = "https://github.com/aosoft/unity-native-plugin-tester", branch = "v0.4.1", features = ["d3d11"] }
